--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 logging.level.org.springframework.web= DEBUG
+
+
+
+## Data base configuration ##
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:/data/demo
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
