--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "frontend": "npm run dev"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
