Spring Boot Security with JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.org.springframework.web= DEBUG
 
-
+spring.security.user.password=Password
 
 ## Data base configuration ##
 spring.datasource.driverClassName=org.h2.Driver
