--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@react-stately/data": "^3.11.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
