--- a/.prettierrc
+++ b/.prettierrc
@@ -20,5 +20,5 @@
   "importOrderSortSpecifiers": true,
   "plugins": ["prettier-plugin-tailwindcss", "@trivago/prettier-plugin-sort-imports"],
   "pluginSearchDirs": false,
-  "tailwindFunctions": ["classNames, classname"]
+  "tailwindFunctions": ["classNames, classname, className"]
 }
