--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "frontend": "npm run dev"
   },
   "dependencies": {
+    "@nextui-org/input": "^2.1.16",
     "@nextui-org/react": "^2.2.9",
     "@react-stately/data": "^3.11.0",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.58",
     "autoprefixer": "^10.0.1",
     "concurrently": "^8.2.2",
     "eslint": "^8",
