--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-logging.level.org.springframework.web= DEBUG
+## External API configuration ##
+steam.api.key= 44F5764DDFE092DDC655B6CB72D65170
 
+logging.level.org.springframework.web=DEBUG
 spring.security.user.password=Password
 
 ## Data base configuration ##
