--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,9 @@ logging.level.org.springframework.web= DEBUG
 spring.security.user.password=Password
 
 ## Data base configuration ##
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:/data/demo
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/quantumlibrary
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
