--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@nextui-org/input": "^2.1.16",
     "@nextui-org/react": "^2.2.9",
     "@react-stately/data": "^3.11.0",
+    "chart.js": "^4.4.3",
     "framer-motion": "^11.0.6",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "next-auth": "^4.24.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
   },
