--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,8 @@ logging.level.org.springframework.web=DEBUG
 spring.security.user.password=Password
 
 ## Data base configuration ##
-spring.datasource.url=jdbc:mysql://localhost:3306/quantumlibrary
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://quantumlibrary.c3kcsywysiq8.eu-north-1.rds.amazonaws.com:3306/QuantumLibrarySQL
+spring.datasource.username=admin
+spring.datasource.password=Quantum5Atom
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
