Update and rename maven.yml to Compile&Build.yml

--- a/.github/workflows/Compile&Build.yml
+++ b/.github/workflows/Compile&Build.yml
@@ -5,6 +5,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
+permissions:
+  contents: read
+  security-events: write
     
 jobs:
   build:
@@ -21,6 +25,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Submit Dependency Snapshot
+      uses: advanced-security/maven-dependency-tree-action@v1
+      with:
+        github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN  }}
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
