Test for controllers and some services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## External API configuration ##
 steam.api.key= ${STEAM_API_KEY}
+steamdb.api.key= ${STEAMDB_API_KEY}
 
 logging.level.org.springframework.web=DEBUG
 spring.security.user.password=Password
@@ -10,3 +11,4 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
