--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,14 @@
 ## External API configuration ##
-steam.api.key= ${STEAM_API_KEY}
-steamdb.api.key= ${STEAMDB_API_KEY}
+steam.api.key= 44F5764DDFE092DDC655B6CB72D65170
+steamdb.api.key= 1a8c79dc9eff0c11128e1a230c8abdae
 
 logging.level.org.springframework.web=DEBUG
 spring.security.user.password=Password
 
 ## Data base configuration ##
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/QuantumLibrarySQL
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
