--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+.env.local
 
 # Nextjs related
 
