--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "frontend": "npm run dev"
   },
   "dependencies": {
-    "@nextui-org/input": "^2.1.16",
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/input": "^2.2.5",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/system": "^2.2.6",
+    "@nextui-org/theme": "^2.2.11",
     "@react-stately/data": "^3.11.0",
     "chart.js": "^4.4.3",
-    "framer-motion": "^11.0.6",
+    "framer-motion": "^11.11.9",
     "next": "^14.2.5",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -35,6 +37,6 @@
     "postcss": "^8",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.0"
   }
 }
