--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 ## External API configuration ##
-steam.api.key= ${STEAM_API_KEY}
-steamdb.api.key= ${STEAMDB_API_KEY}
-
+steam.api.key=${STEAM_API_KEY}
+steamdb.api.key=${STEAMDB_API_KEY}
 logging.level.org.springframework.web=DEBUG
-spring.security.user.password=Password
-
+spring.security.user.password=${SB_SECURITY_PASSWORD}
 ## Data base configuration ##
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
