Clean code and Quodana

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 ## External API configuration ##
-STEAM_API_KEY=44F5764DDFE092DDC655B6CB72D65170
-STEAMDB_API_KEY=1a8c79dc9eff0c11128e1a230c8abdae
-SB_SECURITY_PASSWORD=Password
+STEAM_API_KEY=${STEAM_API_KEY}
+STEAMDB_API_KEY=${STEAMDB_API_KEY}
+SB_SECURITY_PASSWORD=${SB_SECURITY_PASSWORD}
 ## Data base configuration ##
 spring.datasource.url=${DB_TEST_URL}
 spring.datasource.username=${DB_TEST_USER}
