--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,8 @@
 ## External API configuration ##
-steam.api.key= 44F5764DDFE092DDC655B6CB72D65170
-steamdb.api.key= 1a8c79dc9eff0c11128e1a230c8abdae
-
+steam.api.key=${STEAM_API_KEY}
+steamdb.api.key=${STEAMDB_API_KEY}
 logging.level.org.springframework.web=DEBUG
-spring.security.user.password=Password
-
+spring.security.user.password=${SB_SECURITY_PASSWORD}
 ## Data base configuration ##
 spring.datasource.url=jdbc:mysql://localhost:3306/QuantumLibrarySQL
 spring.datasource.username=root
