Squash GA fixes
Rename test.yml to Test.yml
Update Test.yml
Change workflow Test to Tests

Update Tests.yml
Docker Setup

Create DockerDeploy.yml
Production changes

Update DockerDeploy.yml
Update DockerDeploy.yml
Add env to actions

Update DockerDeploy.yml
Update DockerDeploy.yml
Update DockerDeploy.yml
Update DockerDeploy.yml
Update DockerDeploy.yml
Update DockerDeploy.yml
Update DockerDeploy.yml
Update DockerDeploy.yml

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
 
 # vercel
 .vercel
@@ -50,3 +50,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# docker
+docker-compose.yml
+
+*.log
