--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -1,13 +1,11 @@
-name: Compilation and build
+name: Tests
 
 on:
+  push:
+    branches: [ "Back/**", "Front/**"]
   pull_request:
     branches: [ "main" ]
 
-permissions:
-  contents: read
-  security-events: write
-    
 jobs:
   build:
     env:
@@ -18,12 +16,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up JDK 21
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Run test
+      run: mvn test
