--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 ## External API configuration ##
-steam.api.key= 44F5764DDFE092DDC655B6CB72D65170
+steam.api.key= ${STEAM_API_KEY}
 
 logging.level.org.springframework.web=DEBUG
 spring.security.user.password=Password
 
 ## Data base configuration ##
 spring.datasource.url=jdbc:mysql://quantumlibrary.c3kcsywysiq8.eu-north-1.rds.amazonaws.com:3306/QuantumLibrarySQL
-spring.datasource.username=admin
-spring.datasource.password=Quantum5Atom
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
