--- a/.github/workflows/TestAndDeploy.yml
+++ b/.github/workflows/TestAndDeploy.yml
@@ -1,17 +1,58 @@
-name: CD with EC2
+name: CI with MySQL and CD with EC2
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows:
-      - Tests
-    types:
-      - completed
+  push:
+    branches:
+      - main
 
 jobs:
-  deploy:
-    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
+  tests:
+    env:
+      STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
+      STEAMDB_API_KEY: ${{ secrets.STEAMDB_API_KEY }}
+      SB_SECURITY_PASSWORD: ${{ secrets.SB_SECURITY_PASSWORD }}
+
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: root_password
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: test_user
+          MYSQL_PASSWORD: test_password
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost -u root --password=root_password"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn clean install -DskipTests
+
+      - name: Run Tests
+        env:
+          DB_TEST_URL: jdbc:mysql://localhost:3306/test_db
+          DB_TEST_USER: test_user
+          DB_TEST_PASSWORD: test_password
+        run: mvn test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: tests
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
